fixing layout issues with mobile version

--- a/info.css
+++ b/info.css
@@ -1043,9 +1043,10 @@ button:hover{
   .checkout-summary{
     position: static;
   }
-}
-
-   
+  
+  .checkout-btn {
+    width: 80%;
+  }
      .product-container {    
        grid-template-columns: 1fr;
      }  
@@ -1059,6 +1060,7 @@ button:hover{
       display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 1rem;
         padding: 0.75rem 1rem;
         width: 100%;
         list-style: none;
@@ -1066,12 +1068,13 @@ button:hover{
 
      .nav-actions {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
     align-items: center;
     }
 
+
     .account-btn img, .cart-btn img{
-       width: 32px;
+       width: 42px;
        height: auto;
      }
 
@@ -1079,11 +1082,10 @@ button:hover{
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0.75rem 1rem;
     }
    
-    .topnav_logo {
-      width: 120px;
+    .topnav__logo {
+      width: 200px;
       height: auto;
     }
 
